--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+    		<link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.css') }}" />
+        	<link rel="stylesheet" href="{{ asset('css/app.css') }}" />
+        {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+    	<div id="main-container">
+        	{% block body %}{% endblock %}
+    	</div>
+        {% block javascripts %}
+        	<script type="text/javascript" src="{{ asset('bootstrap/js/bootstrap.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
