--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,11 +6,22 @@ body {
     background-color: #333;
 }
 
+#header{
+	position: relative;
+	width: 100%;
+	height: 5%;
+	min-height: 50px;
+	background-color: #000;
+	color: #fff;
+}
+
 #main-container{
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	padding: 0px;
+	overflow: hidden; 
+	min-width: 1280px;
 }
 
 .clear{
