--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,15 +2,44 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
     		<link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.css') }}" />
         	<link rel="stylesheet" href="{{ asset('css/app.css') }}" />
+            <link rel="stylesheet" href="{{ asset('css/headers.css') }}" />
+
         {% endblock %}
     </head>
     <body>
     	<div id="main-container">
-        	{% block body %}{% endblock %}
+            {% block header %}
+                <div id="header">
+                    <div id="header_left">
+                        {% block header_left %}
+                            <ul class="header_list">
+                                <li class="header_brand">FFFGAMES</li>      
+                            </ul>
+                        {% endblock %}
+                    </div>
+                    <div id="header_center">
+                        {% block header_center %}
+                            <ul class="header_list">
+                                <li class="header_brand">INFO GAME: 324 players in 187 rooms for 23 games</li>      
+                            </ul>
+                        {% endblock %}
+                    </div>
+                    <div id="header_right">
+                        {% block header_right %}{% endblock %}
+                    </div>                   
+                </div>
+                <div class="clear"></div>
+        	{% endblock %}
+
+            {% block body %}{% endblock %}
+
+            <div id="footer">{% block footer %}{% endblock %}</div>
     	</div>
         {% block javascripts %}
         	<script type="text/javascript" src="{{ asset('bootstrap/js/bootstrap.js') }}"></script>
