--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,19 +2,45 @@
 
 {% block title %}Hello {{ controller_name }}!{% endblock %}
 
+{% block stylesheets %}
+	{{ parent() }}
+
+	<link rel="stylesheet" href="{{ asset('css/home.css') }}" />
+
+{% endblock %}	
+
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	{% if not is_granted("ROLE_USER_PREMIUM") %}
+		<div id="adds">ADDS</div>
+	{% endif %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	{% if is_granted("ROLE_USER") %}
+		<div id="rooms">ROOMS</div>
+	{% endif %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
-</div>
+	{% if is_granted("ROLE_USER") %}
+		<div id="playerlist">
+			<ul>
+				<li style="border-bottom: 1px solid black;">Joh-Mickael Doe (Lobby)<br />
+					Level 8 | Global 1.258.963
+				</li>
+				
+			</ul>
+		</div>
+	{% endif %}
+
+	{% if is_granted("ROLE_USER") %}
+		<div id="chat">
+			<div id="chat_screen">
+				<ul>
+					<li>Chat enabled...</li>
+				</ul>
+			</div>
+			<div id="chat_field">
+				<textarea id="chat_textarea" placeholder="Text here..."></textarea>
+			</div>
+		</div>
+	{% endif %}
+
+	<div class="clear"></div>
 {% endblock %}
