--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,6 +6,12 @@ body {
     background-color: #333;
 }
 
+ul{
+	margin: 0px;
+	padding: 0px;
+	list-style-type: none;
+}
+
 #header{
 	position: relative;
 	width: 100%;
@@ -21,7 +27,6 @@ body {
 	height: 100%;
 	padding: 0px;
 	overflow: hidden; 
-	min-width: 1280px;
 }
 
 .clear{
