--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,7 +9,10 @@
 
 {% endblock %}
 
+{% block header_right %}{% endblock %}
+
 {% block body %}
+
 <div id="center-form">
     <div id="welcome-message" class="login-row"></div>
     <div id="login-form" class="login-row">
