--- a/public/css/headers.css
+++ b/public/css/headers.css
@@ -1,8 +1,8 @@
 #header_right{
 	position: relative;
 	float: right;
-	width: 30%;
-	min-width: 150px;
+	/*width: 30%;*/
+	/*min-width: 150px;*/
 	height: 100%;
 	text-align: right;
 }
