profile/preference/createnew

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
                   </div>
                   <div class="mr-auto p-3">
                     {% block header_center %}
-                        INFO GAME: 324 players in 187 rooms for 23 games
+                        INFO GAME: <span id="info_nbplayer">0</span> players in <span id="info_nbroom">0</span> rooms for <span id="info_nbgame">0</span> games
                     {% endblock %}
                   </div>
                   <div class="p-2">
